# node-size-analyzer

./: .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: force-publish.yml  manual-crates-publish.yml  release.yml  semantic-release.yml
scripts/: sync-crates-version.sh
src/: main.rs
