[package]
name = "node-size-analyzer"
version = "0.7.1"
edition = "2021"
description = "CLI tool to analyze node_modules sizes"
authors = ["Cary Wolff <boss@caryyon.com>"]
license = "MIT"
repository = "https://github.com/Caryyon/node-size-analyzer"

[dependencies]
ratatui = "0.24"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
walkdir = "2.4"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "node-size"
path = "src/main.rs"
